apps/mautrix/googlechat/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: googlechat
spec:
  hostnames:
    - mautrix-googlechat.i.shikanime.studio
  parentRefs:
    - name: googlechat
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: googlechat-redirect
spec:
  hostnames:
    - mautrix-googlechat.i.shikanime.studio
  parentRefs:
    - name: googlechat
      sectionName: http
